[package]
name = "rusty-nhentai"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.7", features = ["json", "stream"]}
tokio = { version = "1", features = ["sync", "rt", "fs", "macros"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
futures-util = "0.3.17"
zip = "0.5.13"
clap = "2"
url = "2"
indicatif = "0.16"
serde_json = "1"
serde_with = "1"
serde_yaml = "0.8"
