[package]
name = "rusty-nhentai"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json", "stream"]}
tokio = { version = "1", features = ["sync", "rt", "fs", "macros"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
zip = "0.5"
clap = "2"
url = "2"
indicatif = "0.16"
serde_json = "1"
serde_with = "1"
prettytable-rs = "0.8.0"
serde_yaml = "0.8"
